--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "knex": "^0.20.15",
+    "nodemon": "^2.0.3",
     "sqlite3": "^4.1.1"
   }
 }
